# beg-gestion

./: .env.example  CLAUDE.md  bun.lockb  compose.build.yml  compose.prod.yml  compose.staging.yml  compose.yml  package.json
apps/api/: eslint.config.ts  package.json
apps/api/drizzle/: 0000_plain_justin_hammer.sql  0001_fair_eternity.sql  0002_concerned_devos.sql  0003_graceful_slipstream.sql  0004_rename_audit_user_initials.sql  0005_lean_omega_red.sql  0006_fresh_talon.sql  0007_hard_tyger_tiger.sql
apps/api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  _journal.json
apps/api/src/: config.ts  index.ts
apps/api/src/db/: fts.ts  import.ts  index.ts  migrate.ts  rebuild-fts.ts  schema.ts  seed.ts
apps/api/src/routes/: activity.ts  activityType.ts  auditLog.ts  client.ts  collaboratorGroup.ts  company.ts  engineer.ts  invoice.ts  location.ts  monthlyHours.ts  project.ts  projectType.ts  (+5 more)
apps/app/: eslint.config.ts  index.html  package.json  vite.config.ts  vitest.config.ts
apps/app/src/: App.vue
apps/desktop/: bun.lockb  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
initial-data/: projectTypes.tsv
plans/: code-quality-tools.md  test-coverage.md  tests-api.md  tests-frontend.md  tests-validations.md
provision/nginx/: Dockerfile.multistage
ralph/: prd.json  progress.txt
scripts/: build-docker.sh  test-all.sh
tasks/2026-04-08/: secretary-bugfixes.md
(+194 files in other folders)
